# Masterproject2

./: .$Aufbau_Struktur.drawio.bkp  .$MSE Project Idea.drawio.bkp  .gitattributes  .gitignore  .gitmodules  Aufbau_Struktur.drawio  Contacts.txt  Helpfile.md  MSE Project Backup.drawio  MSE Project Idea.drawio  MasterProject.puml  UseCase_Developpement.drawio  commit_submodules.sh  docker-compose.yml
10_Twincat/Demo/: Demo.sln  UpgradeLog.htm
10_Twincat/Demo/Demo/: Demo.tsproj
10_Twincat/Demo/Demo/PLCStruct/: PLCStruct.plcproj  PlcTask.TcTTO
10_Twincat/Dev/: Dev.sln
10_Twincat/Dev/Dev/: Dev.tsproj  TrialLicense.tclrs
10_Twincat/Dev/Dev/Runtime/: PlcTask.TcTTO  Runtime.plcproj  Runtime.tmc
10_Twincat/Dev/Dev/_Boot/: TargetDescription.xml
10_Twincat/Dev/Empty TwinCAT Connectivity Project1/: Empty TwinCAT Connectivity Project1.tcconnproj
10_Twincat/Dev/Empty TwinCAT Connectivity Project1/VSSettings/: .vsm
10_Twincat/Dummy/: Dummy.sln
10_Twincat/Dummy/Dummy/: Dummy.tsproj
10_Twincat/Dummy/Dummy/Test/: PlcTask.TcTTO  Test.plcproj
10_Twincat/MAIN/: MAIN.sln  UpgradeLog.htm
10_Twincat/MAIN/MAIN/: MAIN.tsproj
10_Twincat/MAIN/MAIN/Test1/: PlcTask.TcTTO  Test1.plcproj
10_Twincat/TwinCAT Project1/: TwinCAT Project1.sln
10_Twincat/TwinCAT Project1/TwinCAT Project1/: Aufbau.puml  TwinCAT Project1.tsproj
10_Twincat/TwinCAT Project1/TwinCAT Project1/Untitled1/: PlcTask.TcTTO  Untitled1.plcproj  Untitled1.tmc  Untitled1.tmcRefac
20_ROS/: Docker_Helpfile.md  Dockerfile  docker-compose.yml  key.txt
20_ROS/Archiv/.devcontainer/: devcontainer.json
20_ROS/Archiv/.devcontainer/docker/: README.md  (+2 more)
20_ROS/docker/: dockerfile  join.sh  run.sh
20_ROS/src/clones/beckhoff_ads_driver/beckhoff_ads_hardware_interface/: CHANGELOG.rst  CMakeLists.txt  beckhoff_ads_hardware_interface.xml  package.xml
20_ROS/src/clones/beckhoff_ads_driver/beckhoff_ads_hardware_interface/include/beckhoff_ads_hardware_interface/: beckhoff_ads_hardware_interface.hpp
20_ROS/src/clones/beckhoff_ads_driver/beckhoff_ads_hardware_interface/src/: beckhoff_ads_hardware_interface.cpp
20_ROS/src/eta_gz/: README.md
20_ROS/src/eta_rmf/: README.md
20_ROS/src/odin/: setup.cfg  setup.py
20_ROS/src/omron_ld90_description/: package.xml  setup.py
20_ROS/src/tc_ros2_itf/: package.xml  setup.cfg  setup.py
20_ROS/todo/: .rmf_schedule_node.yaml  ARCHITECTURE.md  README.md  TESTING.md
30_Tests/Test_CPP_Tc/: Test_CPP.sln
40_DB/: init.sql  init_tc_db.xml  robotdata.db
80_Ressources/: Managed nodes.url  Protocol Performance in Robotics- Analyzing ADS vs. UDP Protocols for ROS2 and TwinCAT Integration - IEEE Conference Publicat.url  Robotics - SRCI - www.profibus.com.url  github-fusion360-urdf-ros2.url
(+328 files in other folders)
